syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.jiache.grpc.original";
option java_outer_classname = "ServerProto";

package io.jiache.grpc.original;

service ServerService{
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntriesRequest{
    int32 term = 1;
    int32 committedIndex = 2;
    int32 preLogIndex = 3;
    string entry = 4;
}

message AppendEntriesResponse{
    int32 term = 1;
    bool success = 2;
}

message RequestVoteRequest{
    int32 term = 1;
    int32 lastLogIndex = 2;
    int32 lastLogTerm = 3;
}

message RequestVoteResponse{
    int32 term = 1;
    bool voteGranted = 2;
}